force-app/main/default/objects/KimbleOne__CommissionRate__c/KimbleOne__CommissionRate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Commission Rate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Commission Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>