force-app/main/default/objects/KimbleOne__CommissionRate__c/fields/KimbleOne__CommissionAgreement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CommissionAgreement__c</fullName>
    <label>Commission Agreement</label>
    <referenceTo>KimbleOne__CommissionAgreement__c</referenceTo>
    <relationshipLabel>Commission Rates</relationshipLabel>
    <relationshipName>CommissionRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>