force-app/main/default/objects/KimbleOne__CommissionRate__c/fields/KimbleOne__CommissionAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CommissionAmount__c</fullName>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>