force-app/main/default/objects/KimbleOne__CommissionRate__c/fields/KimbleOne__CommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CommissionPercentage__c</fullName>
    <label>Commission Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>