force-app/main/default/objects/KimbleOne__CommissionRate__c/fields/KimbleOne__CommissionRateType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CommissionRateType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Rate Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>CommissionRateType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Commission Rates</relationshipLabel>
    <relationshipName>CommissionRates</relationshipName>
    <type>Lookup</type>
</CustomField>