force-app/main/default/objects/KimbleOne__CommissionRate__c/fields/KimbleOne__LowerMeasureValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LowerMeasureValue__c</fullName>
    <label>Lower Measure Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>