force-app/main/default/objects/KimbleOne__CommissionRate__c/fields/KimbleOne__UpperMeasureValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UpperMeasureValue__c</fullName>
    <label>Upper Measure Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>